--- a/SCSS/all_blocks/_header.scss
+++ b/SCSS/all_blocks/_header.scss
@@ -19,6 +19,7 @@
             letter-spacing: 0.923077px;
             text-transform: uppercase;
             padding: 16px;
+            color: $grey;
         }
         &__item {            
 
