--- a/SCSS/all_blocks/_general.scss
+++ b/SCSS/all_blocks/_general.scss
@@ -11,6 +11,7 @@ body {
     font-style: normal;
     font-size: 16px;
     line-height: 26px;
+    background-color: $cream;
 }
 
 .container {
@@ -29,6 +30,7 @@ body {
 h2,h3,h4 {
     margin: 0;
     padding: 0;
+    font-family: 'Fraunces', Helvetica, sans-serif;
 }
 
 .visually-hidden {
