--- a/SCSS/all_blocks/_mixin.scss
+++ b/SCSS/all_blocks/_mixin.scss
@@ -1,7 +1,9 @@
 @mixin button {
     // button 
-    padding: 15px 80px;
-    background-color: $dark-cyan;   
+    display: inline-block;
+    padding: 15px 30px;
+    background-color: $dark-cyan;  
+    border-radius: 6px; 
     // text
     text-decoration: none;
     font-family: 'Fraunces';
